📌 Pin notion-databases @ v0.1.1

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dependencies": {
         "@notionhq/client": "0.4.11",
         "node-fetch": "^2.6.6",
-        "notion-databases": "^0.1.1"
+        "notion-databases": "0.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.16.5",
