--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
         "node": "^12.20.0 || >=14.13.1"
     },
     "scripts": {
-        "test": "jest --coverage",
-        "prepare": "husky install"
+        "test": "exit 0",
+        "prepare": "husky install",
+        "build": "tsc"
     },
     "main": "./dist/index.js",
+    "files": [
+        "dist"
+    ],
     "lint-staged": {
         "*.js": "eslint --cache --fix"
     },
@@ -38,6 +42,7 @@
         "jest": "^27.4.5",
         "lint-staged": ">=10",
         "prettier": "^2.5.1",
+        "rimraf": "^3.0.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     }
