--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "scripts": {
         "test": "exit 0",
         "prepare": "husky install",
-        "build": "tsc"
+        "build": "rimraf dist && tsc"
     },
     "main": "./dist/index.js",
-    "files": [
-        "dist"
-    ],
     "lint-staged": {
         "*.js": "eslint --cache --fix"
     },
@@ -42,7 +39,6 @@
         "jest": "^27.4.5",
         "lint-staged": ">=10",
         "prettier": "^2.5.1",
-        "rimraf": "^3.0.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
     }
