--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "dependencies": {
         "node-fetch": "^2.6.6",
-        "notion-databases": "0.1.2-alpha.2"
+        "notion-databases": "0.2.0-0"
     },
     "devDependencies": {
         "@babel/core": "^7.16.5",
