--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "test": "exit 0",
         "prepare": "husky install",
-        "build": "rimraf dist && tsc --sourceMap false"
+        "build": "rimraf dist && tsc"
     },
     "main": "./dist/index.js",
     "files": [
