--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "notion-canvas-sync",
-    "version": "0.1.2-2",
+    "version": "0.1.2",
     "description": "For syncing a notion page with canvas data",
     "repository": "https://github.com/bkeys818/notion-canvas-sync.git",
     "author": "Ben Keys (https://github.com/bkeys818)",
